@@ -4111,8 +4111,8 @@ in .byte hi8(symbol)  */
   BFD_RELOC_AVR_8_HI,
 
 /* This is a 8 bit reloc for the AVR that stores bits 16..23 of a symbol
-in .byte hhi8(symbol)  */
-  BFD_RELOC_AVR_8_HHI,
+in .byte hlo8(symbol)  */
+  BFD_RELOC_AVR_8_HLO,
 
 /* Renesas RL78 Relocations.  */
   BFD_RELOC_RL78_NEG8,
