@@ -1886,7 +1886,7 @@ static const char *const bfd_reloc_code_real_names[] = { "@@uninitialized@@",
   "BFD_RELOC_AVR_6_ADIW",
   "BFD_RELOC_AVR_8_LO",
   "BFD_RELOC_AVR_8_HI",
-  "BFD_RELOC_AVR_8_HHI",
+  "BFD_RELOC_AVR_8_HLO",
   "BFD_RELOC_RL78_NEG8",
   "BFD_RELOC_RL78_NEG16",
   "BFD_RELOC_RL78_NEG24",
